--- a/Interview Checklist/Python/06_DailyCoding_Algo_InterviewQ_Solved.ipynb
+++ b/Interview Checklist/Python/06_DailyCoding_Algo_InterviewQ_Solved.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Daily Coding Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOF+NU4Hw5sLQgoHoonvmWb",
+      "authorship_tag": "ABX9TyMXk3j8XoKIEFTPkuh7QYTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -488,6 +488,87 @@
       "cell_type": "code",
       "metadata": {
         "id": "V94Y8LKdenFh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VjDcwBHJ372s"
+      },
+      "source": [
+        "# codecademy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UMBjzHmQ3_l2"
+      },
+      "source": [
+        "### Palindrome\n",
+        "# \"aba\" or \"abba\" # \"simple\" palindromes\n",
+        "# \"taco cat\" # palindrome with spaces\n",
+        "# \"racecar!\" # palindrome with punctuation\n",
+        "# \"able was I, ere I saw elba\" # both!\n",
+        "\n",
+        " what if we wanted to use recursion?\n",
+        "def palindrome_1(str):\n",
+        "  if len(str) <= 1:\n",
+        "    return True\n",
+        "  if str[0] != str[-1]:\n",
+        "    return False\n",
+        "  return palindrome_1(str[1:-1])\n",
+        "\n",
+        "# what if we didn't care about case?\n",
+        "def palindrome_2(str):\n",
+        "  lower = str.lower()\n",
+        "  for i in range(len(str) // 2):\n",
+        "    if lower[i] != lower[-i - 1]:\n",
+        "      return False\n",
+        "  return True\n",
+        "\n",
+        "# what if we wanted to ignore punctuation?\n",
+        "def palindrome_3(str):\n",
+        "  punctuation = [',', '!', '?', '.']\n",
+        "  no_punc_str = str[:]\n",
+        "  for punc in punctuation:\n",
+        "    no_punc_str = no_punc_str.replace(punc, '')\n",
+        "  for i in range(len(no_punc_str) // 2):\n",
+        "    if no_punc_str[i] != no_punc_str[-i - 1]:\n",
+        "      return False\n",
+        "  return True \n",
+        "\n",
+        "# what if we wanted to ignore space?\n",
+        "def palindrome_4(str):\n",
+        "  no_space_str = str.replace(' ', '')\n",
+        "  for i in range(len(no_space_str) // 2):\n",
+        "    if no_space_str[i] != no_space_str[-i - 1]:\n",
+        "      return False\n",
+        "  return True "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2We8Bdwr3_iw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xMkxqSUL3_J7"
       },
       "source": [
         ""
